--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
             <div class="ai-decoration-footer"></div>
             <div class="visitor-stats">
                 <div class="stat-item">
-                    <span class="stat-label" data-i18n="footer.totalVisitors">Total Visitors</span>
-                    <span id="totalVisitors" class="stat-value">-</span>
+                    <span class="stat-label" data-i18n="stats.total">Total Visits</span>
+                    <span class="stat-value" id="totalVisits">-</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-label" data-i18n="footer.todayVisitors">Today</span>
-                    <span id="todayVisitors" class="stat-value">-</span>
+                    <span class="stat-label" data-i18n="stats.today">Today</span>
+                    <span class="stat-value" id="todayVisits">-</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-label" data-i18n="footer.monthVisitors">This Month</span>
-                    <span id="monthVisitors" class="stat-value">-</span>
+                    <span class="stat-label" data-i18n="stats.month">This Month</span>
+                    <span class="stat-value" id="monthVisits">-</span>
                 </div>
             </div>
             <p>
