--- a/index.html
+++ b/index.html
@@ -4,96 +4,154 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QiaoZhiShuo - AI & Technology</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/modern.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/22.5.0/i18next.min.js"></script>
-    <script src="js/i18n.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
-        <a href="/" class="logo-link">
-            <img src="images/logo.png" alt="QiaoZhiShuo" class="logo">
-        </a>
-        <div class="nav-links">
-            <a href="#news" class="nav-link" data-i18n="nav.news">News</a>
-            <a href="#blog" class="nav-link" data-i18n="nav.blog">Blog</a>
-            <a href="#media" class="nav-link" data-i18n="nav.media">Media</a>
-            <a href="#contact" class="nav-link" data-i18n="nav.contact">Contact</a>
-            <button id="langSwitch" class="nav-link">
-                <i class="fas fa-globe"></i>
-                <span class="current-lang">EN</span>
-            </button>
+        <div class="nav-container">
+            <a href="/" class="logo">
+                <img src="images/logo.png" alt="QiaoZhiShuo Logo">
+            </a>
+            <div class="nav-links">
+                <a href="#news" class="nav-link" data-i18n="nav.news">News</a>
+                <a href="#blog" class="nav-link" data-i18n="nav.blog">Blog</a>
+                <a href="#contact" class="nav-link" data-i18n="nav.contact">Contact</a>
+                <button class="lang-switch" onclick="toggleLanguage()">
+                    <span data-i18n="nav.language">EN</span>
+                </button>
+            </div>
         </div>
     </nav>
 
-    <section class="hero" style="background-image: url('images/hero-bg.jpg')">
-        <div class="hero-content animate-in">
-            <h1 class="hero-title" data-i18n="home.title">AI Enthusiast & Tech Visionary</h1>
-            <p class="hero-subtitle" data-i18n="home.description">Shaping Tomorrow's World with AI – Where Innovation Knows No Bounds.</p>
+    <section class="hero">
+        <div class="hero-content">
+            <div class="ai-decoration">
+                <div class="ai-circle"></div>
+                <div class="ai-line"></div>
+            <p class="mission-statement" data-i18n="home.description">Shaping Tomorrow's World with AI – Where Innovation Knows No Bounds.</p>
+            </div>
+            <!-- <h1 data-i18n="home.title">AI Enthusiast & Tech Visionary</h1> -->
+            <div class="identity-tags">
+                <span class="tag" data-i18n="home.tag1">AI Enthusiast</span>
+                <span class="tag" data-i18n="home.tag2">Tech Geek</span>
+                <span class="tag" data-i18n="home.tag3">TSLA Holder</span>
+                <span class="tag" data-i18n="home.tag4">Tesla Owner</span>
+            </div>
+            <p class="site-purpose" data-i18n="home.purpose">Dedicated to sharing insights on AI advancement, exploring how artificial intelligence can enhance human potential, and following Tesla's revolutionary journey in shaping our future.</p>
+            <div class="ai-grid">
+                <div class="ai-feature">
+                    <i class="fas fa-robot"></i>
+                    <h3 data-i18n="home.feature1.title">AI Insights</h3>
+                    <p data-i18n="home.feature1.desc">Exploring the latest in AI technology and its impact on our future</p>
+                </div>
+                <div class="ai-feature">
+                    <i class="fas fa-brain"></i>
+                    <h3 data-i18n="home.feature2.title">Personal Growth</h3>
+                    <p data-i18n="home.feature2.desc">Leveraging AI to enhance human potential and capabilities</p>
+                </div>
+                <div class="ai-feature">
+                    <i class="fas fa-car"></i>
+                    <h3 data-i18n="home.feature3.title">Tesla Journey</h3>
+                    <p data-i18n="home.feature3.desc">Following Tesla's innovation and technological breakthroughs</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <section id="news" class="section">
         <div class="section-content">
-            <h2 class="section-title" data-i18n="news.title">Latest News</h2>
+            <h2 data-i18n="sections.news">Latest News</h2>
             <div class="news-grid" id="newsGrid">
                 <!-- News items will be loaded dynamically -->
             </div>
         </div>
     </section>
 
-    <section id="blog" class="section" style="background-image: url('images/blog-bg.jpg')">
+    <section id="blog" class="section">
         <div class="section-content">
-            <h2 class="section-title" data-i18n="blog.title">Blog Posts</h2>
-            <div class="news-grid" id="blogGrid">
-                <!-- Blog posts will be loaded dynamically -->
+            <h2 data-i18n="sections.blog">Blog</h2>
+            <div class="blog-grid" id="blogGrid">
+                <!-- Blog items will be loaded dynamically -->
             </div>
         </div>
     </section>
 
-    <section id="media" class="section">
+    <section id="contact" class="section">
         <div class="section-content">
-            <h2 class="section-title" data-i18n="media.title">Media Gallery</h2>
-            <div class="media-grid" id="mediaGrid">
-                <!-- Media items will be loaded dynamically -->
+            <div class="section-header">
+                <h2 data-i18n="contact.title">Follow & Connect</h2>
+                <div class="ai-accent"></div>
             </div>
-        </div>
-    </section>
-
-    <section id="contact" class="section" style="background-image: url('images/contact-bg.jpg')">
-        <div class="section-content">
-            <h2 class="section-title" data-i18n="contact.title">Follow & Connect</h2>
-            <div class="social-links">
-                <a href="https://github.com/qiaozhishuo" target="_blank" class="social-link" title="GitHub">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://x.com/qiaozhishuo" target="_blank" class="social-link" title="X (Twitter)">
+            <div class="social-grid">
+                <a href="https://x.com/qiaozhishuo" target="_blank" class="social-card">
                     <i class="fab fa-twitter"></i>
+                    <h3>X (Twitter)</h3>
+                    <p>@qiaozhishuo</p>
                 </a>
-                <a href="https://tiktok.com/@qiaozhishuo" target="_blank" class="social-link" title="TikTok">
+                <a href="https://github.com/qiaozhishuo" target="_blank" class="social-card">
+                    <i class="fab fa-github"></i>
+                    <h3>GitHub</h3>
+                    <p>@qiaozhishuo</p>
+                </a>
+                <a href="https://tiktok.com/@qiaozhishuo" target="_blank" class="social-card">
                     <i class="fab fa-tiktok"></i>
+                    <h3>TikTok</h3>
+                    <p>@qiaozhishuo</p>
                 </a>
-                <a href="https://www.youtube.com/@qiaozhishuo" target="_blank" class="social-link" title="YouTube">
+                <a href="https://www.youtube.com/@qiaozhishuo" target="_blank" class="social-card">
                     <i class="fab fa-youtube"></i>
+                    <h3>YouTube</h3>
+                    <p>@qiaozhishuo</p>
                 </a>
+                <div class="social-card">
+                    <i class="fas fa-heart"></i>
+                    <h3>小红书</h3>
+                    <p>乔智说</p>
+                </div>
+                <div class="social-card">
+                    <i class="fas fa-video"></i>
+                    <h3>视频号</h3>
+                    <p>乔智说</p>
+                </div>
+                <div class="social-card">
+                    <i class="fas fa-music"></i>
+                    <h3>抖音</h3>
+                    <p>乔智说</p>
+                </div>
+                <div class="social-card">
+                    <i class="fas fa-play-circle"></i>
+                    <h3>哔哩哔哩</h3>
+                    <p>乔智说</p>
+                </div>
+                <div class="social-card">
+                    <i class="fas fa-envelope"></i>
+                    <h3>Email</h3>
+                    <p>tsla100times@outlook.com</p>
+                </div>
+                <div class="social-card">
+                    <i class="fab fa-weixin"></i>
+                    <h3>微信</h3>
+                    <p>seeailife</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <footer class="footer">
+    <footer>
         <div class="footer-content">
             <div class="visitor-stats">
                 <div class="stat-item">
-                    <span class="stat-value" id="totalVisits">-</span>
                     <span class="stat-label" data-i18n="stats.total">Total Visits</span>
+                    <span class="stat-value" id="totalVisits">-</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-value" id="todayVisits">-</span>
                     <span class="stat-label" data-i18n="stats.today">Today</span>
+                    <span class="stat-value" id="todayVisits">-</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-value" id="monthVisits">-</span>
                     <span class="stat-label" data-i18n="stats.month">This Month</span>
+                    <span class="stat-value" id="monthVisits">-</span>
                 </div>
             </div>
             <p>
@@ -103,6 +161,8 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/22.5.0/i18next.min.js"></script>
+    <script src="js/i18n.js"></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html> 
